@startuml
class hiber.config.AppConfig {
- Environment env
+ DataSource getDataSource()
+ LocalSessionFactoryBean getSessionFactory()
+ HibernateTransactionManager getTransactionManager()
}
class hiber.model.User {
- Long id
- String firstName
- String lastName
- String email
+ Long getId()
+ void setId(Long)
+ String getFirstName()
+ void setFirstName(String)
+ String getLastName()
+ void setLastName(String)
+ String getEmail()
+ void setEmail(String)
}
interface hiber.dao.UserDao {
~ void add(User)
~ List<User> listUsers()
}
class hiber.MainApp {
+ {static} void main(String[])
}
interface hiber.service.UserService {
~ void add(User)
~ List<User> listUsers()
}
class hiber.service.UserServiceImp {
- UserDao userDao
+ void add(User)
+ List<User> listUsers()
}
class hiber.dao.UserDaoImp {
- SessionFactory sessionFactory
+ void add(User)
+ List<User> listUsers()
}


hiber.service.UserService <|.. hiber.service.UserServiceImp
hiber.dao.UserDao <|.. hiber.dao.UserDaoImp
@enduml